# outlook-mcp

./: .dxtignore  .gitignore  .npmignore  DIRECTORY_SUBMISSION.md  EXAMPLES.md  LICENSE  MCP_POLICY_COMPLIANCE.md  PRIVACY.md  README.md  SUBMISSION_DETAILS.md  TESTING_RESULTS.md  outlook-mcp-2.0.0-unified.dxt  outlook-mcp-2.0.0.dxt  outlook-mcp-2.0.0.tgz  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  test_calendar_fix.py  test_list_optimization.py  test_search_optimization.py
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml
desktop-extension/: manifest.json
desktop-extension-node/: .dxtignore  manifest.json
desktop-extension-node/server/: index.js  package-lock.json  package.json
desktop-extension/python/: outlook_search.py  outlook_utils.py
desktop-extension/server/: index.js  main.py  package-lock.json  package.json
examples/: claude-code-setup.md  claude-desktop-config.json
outlook_mcp/: __init__.py  outlook_filter.py  server.py
outlook_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/: outlook_filter.py  outlook_list.py  outlook_read.py  outlook_search.py
scripts/: build-dxt.js
src/: index.js
