[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outlook-mcp"
version = "2.0.0"
description = "MCP server for Microsoft Outlook integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Connor Larson"},
]
keywords = ["mcp", "outlook", "email", "calendar", "automation", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Email",
]

dependencies = [
    "mcp>=0.1.0",
    "pywin32>=300",
]

[project.urls]
Repository = "https://github.com/cjmlarson/outlook-mcp"
Issues = "https://github.com/cjmlarson/outlook-mcp/issues"

[project.scripts]
outlook-mcp = "outlook_mcp.server:serve"

[tool.setuptools.packages.find]
include = ["outlook_mcp*"]